with '#' will be ignored, and an empty message aborts the commit.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 		<meta property="og:title" content="Starbucks Coffee Company">
 		<meta property="og:type" content="company">
+		<meta property="og:url" content="https://www.starbucks.com/">
+		<meta property="og:image" content=""
 		<meta property="og:description" content="Starbucks Coffee">
 
 		<link rel="icon" href="image/starbucks.svg">
@@ -20,10 +22,10 @@
 		<header>
 			<nav>
 				<ul>
-					<li>logo</li>
-					<li>MENU</li>
-					<li>REWARDS</li>
-					<li>GIFT CARDS</li>
+					<li><a href=""><img src="image/starbucks.svg" width="38.71"></a></li>
+					<li><a href="#menu">MENU</a></li>
+					<li><a href="#rewards">REWARDS</a></li>
+					<li><a href="#gift">GIFT CARDS</a></li>
 				</ul>
 			</nav>
 			<main>
