--- a/index.html
+++ b/index.html
@@ -20,21 +20,44 @@
 	
 	<body>
 		<header>
-			<nav>
-				<ul>
-					<li><a href=""><img src="image/starbucks.svg" width="38.71"></a></li>
-					<li><a href="#menu">MENU</a></li>
-					<li><a href="#rewards">REWARDS</a></li>
-					<li><a href="#gift">GIFT CARDS</a></li>
+			<nav class="">
+				<ul style="list-style: none;"  class="container">
+					<div class="container1">
+						<li class="nav item1"><a href="#home"><img src="image/starbucks.svg" width="38.71"></a></li>
+						<li class="nav item2"><a href="#menu">MENU</a></li>
+						<li class="nav item3"><a href="#rewards">REWARDS</a></li>
+						<li class="nav item4"><a href="#gift">GIFT CARDS</a></li>
+					</div>
+					
+					<div class="container2">
+						<li class="nav signin"><a href="#signin">Sign in</a></li>
+						<li class="nav join"><a href="#joinnow">Join now</a></li>
+					</div>
 				</ul>
 			</nav>
-			<main>
-
-			</main>
-			<footer>
-
-			</footer>
 		</header>
+
+		<main style="background-color:beige">
+			<section class="section">
+				<div class="img1">
+					<img src="image/sec1.webp" width="539.33" height="314.6">
+				</div>
+				<div class="art1">
+					<h1>A new way to earn sips and trips</h1>
+					<p>Now you can link your Starbucks® Rewards + Delta SkyMiles® accounts to get:</p>
+					<ul>
+						<li>150 Stars + 500 miles when you link before 12/31</li>
+						<li>150 Stars + 500 miles when you link before 12/31</li>
+						<li>1 mile per $1 spent at Starbucks (excludes taxes and gratuities)*</li>
+					</ul>
+				</div>
+			</section>
+
+		</main>
+
+		<footer style="background-color:beige">
+
+		</footer>
 		<script src="js/script"></script>
 	</body>
 </html>
