--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</nav>
 		</header>
 
-		<main style="background-color:beige">
+		<main style="background-color:cyan">
 			<section class="section">
 				<div class="img1">
 					<img src="image/sec1.webp" width="539.33" height="314.6">
