--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Starbucks Coffee Company">
 		<meta property="og:type" content="company">
 		<meta property="og:url" content="https://www.starbucks.com/">
-		<meta property="og:image" content=""
+		<meta property="og:image" content="">
 		<meta property="og:description" content="Starbucks Coffee">
 
 		<link rel="icon" href="image/starbucks.svg">
@@ -37,26 +37,74 @@
 			</nav>
 		</header>
 
-		<main style="background-color:cyan">
-			<section class="section">
-				<div class="img1">
-					<img src="image/sec1.webp" width="539.33" height="314.6">
+		<main>
+			<section>
+				<div>
+					<img src="image/sec1.webp">
 				</div>
-				<div class="art1">
+				<div>
 					<h1>A new way to earn sips and trips</h1>
 					<p>Now you can link your Starbucks® Rewards + Delta SkyMiles® accounts to get:</p>
 					<ul>
 						<li>150 Stars + 500 miles when you link before 12/31</li>
-						<li>150 Stars + 500 miles when you link before 12/31</li>
+						<li>Double Stars on Delta travel days</li>
 						<li>1 mile per $1 spent at Starbucks (excludes taxes and gratuities)*</li>
 					</ul>
 				</div>
 			</section>
+			
+			<section>
+				<div>
+					<h1>Buy coffee, help grow a community</h1>
+					<p>We care deeply about coffee farmers and their communities. Your support helps us invest in the well-being of farmers across the world’s coffee-growing regions.</p>
+				</div>
+				<div>
+					<img src="image/sec2.webp">
+				</div>
+			</section>
 
+			<section>
+				<div>
+					<img src="image/sec3.webp">
+				</div>
+				<div>
+					<h1>The art of the roast</h1>
+					<p>With a new roast spectrum front and center on our coffee bags, it’s easier than ever to find a taste you love.</p>
+				</div>
+			</section>
+
+			<section>
+				<div>
+					<h1>Nitro all fall long</h1>
+					<p>Ready on tap, super-smooth Nitro Cold Brew. For a silky twist, try Vanilla Sweet Cream Nitro Cold Brew.</p>
+				</div>
+				<div>
+					<img src="image/sec4.jpg">
+				</div>
+			</section>
+
+			<section>
+				<div>
+					<img src="image/sec5.jpg">
+				</div>
+				<div>
+					<h1>Deliciously protein-packed</h1>
+					<p>Keep on the move with a Bacon, Gouda & Egg Sandwich or</br>Egg White & Roasted Red Pepper Egg Bites.</p>
+				</div>
+			</section>
+
+			<section>
+				<div>
+					<h1>Celebrate Latinx Heritage Month</h1>
+					<p>See how the Starbucks Hora del Café Partner (employee) Network is taking action to build stronger and kinder communities for all.</p>
+				</div>
+				<div>
+					<img src="image/sec6.jpg">
+				</div>
+			</section>
 		</main>
 
-		<footer style="background-color:beige">
-
+		<footer>
 		</footer>
 		<script src="js/script"></script>
 	</body>
